# ecsify

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  conanfile.txt  dodo.py  requirements.txt
benchmarks/: CMakeLists.txt  data_pool_benchmarks.cc  entity_pool_benchmarks.cc
examples/: CMakeLists.txt  my_world.cc  world_example.cc
include/ecsify/: component.h  entity.h  world.h  world_builder.h
include/ecsify/internal/: archetype.h  component_pool.h  data_pool.h  entity_pool.h  utils.h  world_impl.h
profiles/: clang18
src/: CMakeLists.txt  entity.cc  entity_pool.cc
tests/: CMakeLists.txt  data_pool_tests.cc  entity_pool_tests.cc  world_tests.cc
